[gd_scene load_steps=4 format=3 uid="uid://cr1v8eimho2uc"]

[ext_resource type="Script" path="res://Player.gd" id="1_i1ryg"]
[ext_resource type="PackedScene" uid="uid://dn4qh4weq6104" path="res://Helper.tscn" id="2_tdkuu"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_15bbk"]
radius = 0.42264
height = 2.1

[node name="CharacterBody3D" type="CharacterBody3D"]
collision_layer = 2
script = ExtResource("1_i1ryg")

[node name="Helper" parent="." instance=ExtResource("2_tdkuu")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.05607, 0)
shape = SubResource("CapsuleShape3D_15bbk")

[node name="IFrameTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="dead" from="Helper" to="." method="_on_helper_dead"]
[connection signal="timeout" from="IFrameTimer" to="." method="_on_i_frame_timer_timeout"]
